Small change font-size and hide search bg for mobile.

--- a/src/scss/_components/search/_base.scss
+++ b/src/scss/_components/search/_base.scss
@@ -38,6 +38,7 @@
       background-image: url('../img/img-bg.png');
     }
     @include respond(max-small) {
+      display: none;
       top: 20px;
       background-position-x: 40%;
     }
