Recode background image.

--- a/src/pug/404.pug
+++ b/src/pug/404.pug
@@ -9,7 +9,8 @@ block content
   div.body.body--start(class!= contentClassName)
 
     section#notFound.notFound
-      .notFound__bg
+      .section__bg.section__bg--light
+
       .c-grid
         .notFound__wrapper
           .notFound__img-wrap
