--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -9,7 +9,7 @@ block content
   div.body.body--start(class!= contentClassName)
 
     section#about.about
-      .about__bg
+      .section__bg.section__bg--light
 
       .c-grid
         .about__wrapper
