--- a/src/pug/components/contacts/_contact.pug
+++ b/src/pug/components/contacts/_contact.pug
@@ -1,7 +1,7 @@
 // CONTACT :: START
 
 section#contact.contact
-  .contact__bg
+  .section__bg.section__bg--light
 
   .c-grid
     .contact__wrapper
