Recode - section min-height with indent.

--- a/src/pug/components/basket/_basket.pug
+++ b/src/pug/components/basket/_basket.pug
@@ -1,6 +1,8 @@
 // SECTION BASKET :: START
 
-section#basket.basket
+section.section#basket.basket
+  .section__bg.section__bg--light
+
   .c-grid
     .basket__wrapper
 
