--- a/src/pug/404.pug
+++ b/src/pug/404.pug
@@ -8,7 +8,7 @@ extends shared/_layout
 block content
   div.body.body--start(class!= contentClassName)
 
-    section#notFound.notFound
+    section.section#notFound.notFound
       .section__bg.section__bg--light
 
       .c-grid
