--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -8,7 +8,7 @@ extends shared/_layout
 block content
   div.body.body--start(class!= contentClassName)
 
-    section#about.about
+    section.section#about.about
       .section__bg.section__bg--light
 
       .c-grid
