--- a/src/pug/components/basket/_basket.pug
+++ b/src/pug/components/basket/_basket.pug
@@ -6,4 +6,11 @@ section.section#basket.basket
   .c-grid
     .basket__wrapper
 
+      include ./_tabs
+      include ./_card
+      include ./_data
+      include ./_delivery
+      include ./_result
+      include ./_message
+
 // SECTION BASKET :: END
