--- a/src/scss/_components/_basket.scss
+++ b/src/scss/_components/_basket.scss
@@ -1,11 +1,66 @@
 // SECTION BASKET :: START
 
 .basket {
+  .c-grid {
+    max-width: 958px;
+  }
+
   &__wrapper {
     z-index: 1;
     position: relative;
     @include fluid(padding-top, 320px, 1920px, 31px, 96px);
   }
+
+  &__row {}
+
+  &__tabs {
+    padding-bottom: 30px;
+    @include respond(max-small) {
+      display: none;
+    }
+
+    &-list {
+      display: flex;
+      align-items: center;
+    }
+
+    &-item {
+      &:last-of-type {
+        .basket__tabs-link {
+          margin-right: 0;
+        }
+      }
+    }
+
+    &-link {
+      display: flex;
+      align-items: center;
+      color: #8d96ae;
+      font-size: 18px;
+      font-weight: 500;
+      @include fluid(margin-right, 320px, 1920px, 15px, 27px);
+      @include fluid(font-size, 320px, 1920px, 14px, 18px);
+      @include transition(color);
+
+      &.is-active {
+        color: #0a1723;
+        font-size: 30px;
+        font-weight: bold;
+        @include fluid(font-size, 320px, 1920px, 24px, 30px);
+        @include transition(color);
+      }
+    }
+  }
+
+  &__card {}
+
+  &__data {}
+
+  &__delivery {}
+
+  &__result {}
+
+  &__message {}
 }
 
 // SECTION BASKET :: END
