--- a/src/pug/components/basket/_message.pug
+++ b/src/pug/components/basket/_message.pug
@@ -1,1 +1,6 @@
-.basket__row.basket__row-0.basket__row--message
+.basket__row.basket__row-5.basket__row--message
+  .basket__message
+    h2.basket__message-title!= "Dziękujemy za złożenie zamówienia!"
+    p.basket__message-text!= "Aktualności będą dostarczane pod wskazany adres e-mail oraz za pośrednictwem wiadomości SMS."
+
+    a.basket__btn(href="#" class="" title="")!= "Wróć do strony głównej"
