--- a/src/scss/_components/_basket.scss
+++ b/src/scss/_components/_basket.scss
@@ -3,6 +3,10 @@
 .basket {
   .c-grid {
     max-width: 958px;
+    @include respond(max-small) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
   }
 
   &__wrapper {
@@ -11,10 +15,49 @@
     @include fluid(padding-top, 320px, 1920px, 31px, 96px);
   }
 
-  &__row {}
+  &__row {
+    padding-bottom: 253px;
+    @include respond(max-small) {
+      padding-bottom: 125px;
+    }
+
+    &-0 {
+      padding-bottom: 30px;
+    }
+  }
+
+  &__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 2em;
+    border: 2px solid #d72d42;
+    background-color: #d72d42;
+    color: $c-white;
+    font-weight: 500;
+    @include fluid(max-width, 320px, 1440px, 290px, 352px);
+    @include fluid(font-size, 320px, 1440px, 18px, 24px);
+    @include transition(border, background-color, color);
+
+    &:hover {
+      background-color: transparent;
+      color: #d72d42;
+      @include transition(border, background-color, color);
+    }
+
+    &:active {
+      border-color: #0a1723;
+      background-color: #0a1723;
+      color: $c-white;
+      @include transition(border, background-color, color);
+    }
+  }
 
   &__tabs {
-    padding-bottom: 30px;
     @include respond(max-small) {
       display: none;
     }
@@ -38,15 +81,15 @@
       color: #8d96ae;
       font-size: 18px;
       font-weight: 500;
-      @include fluid(margin-right, 320px, 1920px, 15px, 27px);
-      @include fluid(font-size, 320px, 1920px, 14px, 18px);
+      @include fluid(margin-right, 320px, 1440px, 15px, 27px);
+      @include fluid(font-size, 320px, 1440px, 14px, 18px);
       @include transition(color);
 
       &.is-active {
         color: #0a1723;
         font-size: 30px;
         font-weight: bold;
-        @include fluid(font-size, 320px, 1920px, 24px, 30px);
+        @include fluid(font-size, 320px, 1440px, 24px, 30px);
         @include transition(color);
       }
     }
@@ -60,7 +103,33 @@
 
   &__result {}
 
-  &__message {}
+  &__message {
+    padding-top: 182px;
+    border-top: 1px solid #cdd7df;
+    text-align: center;
+    @include respond(max-small) {
+      padding-top: 125px;
+      border-top: none;
+    }
+
+    &-title {
+      padding-bottom: 45px;
+      color: #d72d42;
+      font-weight: 500;
+      @include fluid(font-size, 320px, 1440px, 18px, 36px);
+      @include respond(max-small) {
+        padding-bottom: 25px;
+      }
+    }
+
+    &-text {
+      padding-bottom: 50px;
+      @include fluid(font-size, 320px, 1440px, 10px, 20px);
+      @include respond(max-small) {
+        padding-bottom: 30px;
+      }
+    }
+  }
 }
 
 // SECTION BASKET :: END
