--- a/src/pug/components/basket/_delivery.pug
+++ b/src/pug/components/basket/_delivery.pug
@@ -1,1 +1,64 @@
 .basket__row.basket__row-3.basket__row--delivery
+  .basket__delivery
+    .basket__delivery-col.basket__delivery-col--0
+      .basket__delivery-cover.basket__delivery-cover--0
+        p.basket__delivery-title!= "Wysyłka z przedpłatą:"
+
+        .basket__delivery-box-wrapper
+          a.basket__delivery-box.is-active(href="#" class="" title="")
+            div
+              img(src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title="")
+            p!= "Kurier UPS"
+            span!= "14,99,-"
+
+          a.basket__delivery-box(href="#" class="" title="")
+            div
+              img(src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title="")
+            p!= "Kurier UPS"
+            span!= "14,99,-"
+
+          a.basket__delivery-box(href="#" class="" title="")
+            div
+              img(src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title="")
+            p!= "Kurier UPS"
+            span!= "14,99,-"
+
+      .basket__delivery-cover.basket__delivery-cover--1
+        p.basket__delivery-title!= "Wysyłka za pobraniem:"
+
+        .basket__delivery-box-wrapper
+          a.basket__delivery-box.is-active(href="#" class="" title="")
+            div
+              img(src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title="")
+            p!= "Kurier UPS"
+            span!= "14,99,-"
+
+          a.basket__delivery-box(href="#" class="" title="")
+            div
+              img(src="./img/img-kurier.png" srcset="./img/img-kurier@2x.png 2x" alt="" title="")
+            p!= "Kurier UPS"
+            span!= "14,99,-"
+
+
+    .basket__delivery-col.basket__delivery-col--1
+      .basket__delivery-cover.basket__delivery-cover--2
+        p.basket__delivery-title!= "Wysyłka za pobraniem:"
+
+        .basket__delivery-box-wrapper
+          a.basket__delivery-box.is-active(href="#" class="" title="")
+            div
+              img(src="./img/img-paypal.png" srcset="./img/img-paypal@2x.png 2x" alt="" title="")
+            p!= "PayPal"
+
+          a.basket__delivery-box(href="#" class="" title="")
+            div
+              img(src="./img/img-przelewy24.png" srcset="./img/img-przelewy24@2x.png 2x" alt="" title="")
+            p!= "Przelewy24"
+
+          a.basket__delivery-box(href="#" class="" title="")
+            div
+              img(src="./img/img-płatnicza.png" srcset="./img/img-płatnicza@2x.png 2x" alt="" title="")
+            p!= "Karta płatnicza"
+
+    .basket__delivery-col.basket__delivery-col--2
+      button.basket__btn(type="submit")!= "Następny krok"
