--- a/src/scss/_components/_basket.scss
+++ b/src/scss/_components/_basket.scss
@@ -27,6 +27,8 @@
   }
 
   &__btn {
+    outline: none;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,7 +48,8 @@
       @include fluid(max-width, 320px, 1440px, 290px, 352px);
     }
 
-    .basket__row--data & {
+    .basket__row--data &,
+    .basket__row--delivery & {
       max-width: 270px;
       margin-left: auto;
     }
@@ -124,9 +127,186 @@
         }
       }
     }
+
+    &-cover {
+      width: 100%;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
-  &__delivery {}
+  &__delivery {
+    &-col {
+      &--0 {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 65px;
+        padding-bottom: 35px;
+        border-top: 1px solid #cdd7df;
+        @include respond(max-medium) {
+          flex-direction: column;
+        }
+      }
+
+      &--1 {
+        padding-top: 65px;
+        padding-bottom: 35px;
+        border-top: 1px solid #cdd7df;
+      }
+
+      &--2 {
+        padding-top: 38px;
+        border-top: 1px solid #cdd7df;
+        @include respond(max-small) {
+          display: none;
+        }
+      }
+    }
+
+    &-cover {
+      &--0 {
+        position: relative;
+        width: 100%;
+        max-width: calc(179px * 3);
+        @include respond(max-medium) {
+          max-width: 100%;
+          padding-bottom: 35px;
+          margin-bottom: 35px;
+          border-bottom: 1px solid #cdd7df;
+        }
+
+        &:after {
+          content: '';
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          right: -17px;
+          width: 1px;
+          height: 151px;
+          background-color: #cdd7df;
+          @include respond(max-medium) {
+            display: none;
+          }
+        }
+      }
+      &--1 {
+        width: 100%;
+        max-width: calc(179px * 2);
+        @include respond(max-medium) {
+          max-width: 100%;
+        }
+      }
+    }
+
+    &-title {
+      padding-bottom: 26px;
+      color: #222e39;
+      font-weight: 500;
+      @include fluid(font-size, 320px, 1440px, 20px, 24px);
+    }
+
+    &-box {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      max-width: 179px;
+      margin-right: 14px;
+      text-align: center;
+      @include respond(max-extra-small) {
+        max-width: calc(50% - 10px);
+        margin-right: 5px;
+        margin-left: 5px;
+        margin-bottom: 35px;
+      }
+
+      &:last-of-type {
+        margin-right: 0;
+        @include respond(max-extra-small) {
+          margin-bottom: 0;
+        }
+      }
+
+      &.is-active {
+        > div {
+          border-color: #0a1723;
+          @include transition(border-color);
+
+          img {
+            filter: grayscale(0);
+            @include transition(filter);
+          }
+
+          &:after {
+            background-color: #8d96ae;
+            @include transition(background-color);
+          }
+        }
+      }
+
+      &-wrapper {
+        display: flex;
+        @include respond(max-extra-small) {
+          flex-wrap: wrap;
+          align-items: flex-start;
+          justify-content: space-between;
+        }
+      }
+
+      > div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        min-height: 111px;
+        border-radius: 5px;
+        border: 3px solid #8d96ae;
+        background-color: $c-white;
+        @include transition(border-color);
+
+        img {
+          display: block;
+          max-width: 100%;
+          height: auto;
+          filter: grayscale(100%);
+          @include transition(filter);
+        }
+
+        &:after {
+          content: '';
+          z-index: -1;
+          position: absolute;
+          top: 9px;
+          left: -3px;
+          width: calc(100% + 6px);
+          height: 100%;
+          border-radius: 5px;
+          background-color: #e4eaef;
+          @include transition(background-color);
+        }
+      }
+
+      p,
+      span {
+        line-height: 1;
+      }
+
+      p {
+        padding-top: 28px;
+        padding-bottom: 16px;
+        color: #8d96ae;
+        font-size: 18px;
+        font-weight: 500;
+      }
+
+      span {
+        color: #0a1723;
+        font-size: 18px;
+        font-weight: bold;
+      }
+    }
+  }
 
   &__result {}
 
